--- a/test/sample.html
+++ b/test/sample.html
@@ -17,6 +17,9 @@
     <p>{{ actionMessage }}</p>
     <input type="text" v-model="text1">
     <input type="button" v-on:click="doAction" value="click">
+    <p>{{ messagePush }}</p>
+    <input type="text" v-model="text2">
+    <input type="button" v-on:click="doActionPush" value="click">
 </div>
 </body>
 </html>
