--- a/test/sample.html
+++ b/test/sample.html
@@ -17,9 +17,14 @@
     <p>{{ actionMessage }}</p>
     <input type="text" v-model="text1">
     <input type="button" v-on:click="doAction" value="click">
-    <p>{{ messagePush }}</p>
+    <p>Array</p>
+    <p>{{ messagePush.toString() }}</p>
     <input type="text" v-model="text2">
     <input type="button" v-on:click="doActionPush" value="click">
+    <p>JSON</p>
+    <p>{{ messageJSON | json }}</p>
+    <input type="text" v-model="text3">
+    <input type="button" v-on:click="doActionJSON" value="click">
 </div>
 </body>
 </html>
