--- a/Vue_introduction/section3/login.html
+++ b/Vue_introduction/section3/login.html
@@ -11,43 +11,6 @@
 </div>
 
 <!-- テンプレート -->
-<script type="text/x-template" id="login-template">
-    <div id="login-template">
-        <div>
-            <input type="text" placeholder="ログインID" v-model="userid">
-        </div>
-        <div>
-            <input type="password" placeholder="パスワード" v-model="password">
-        </div>
-        <button @click="login()">ログイン</button>
-    </div>
-</script>
-<script>
-    Vue.component('user-login',{
-        template: '#login-template',
-        data: function () {
-            return {
-                userid: '',
-                password: ''
-            }
-        },
-        methods: {
-            login: function () {
-                auth.login(this.userid, this.password);
-            }
-        }
-    })
-    // ログインダミー
-    var auth = {
-        login: function (id, password) {
-            window.alert("userid" + id + "\n" +  "password" + password);
-        }
-    }
-
-    new Vue({
-        el: "#login-example"
-    })
-</script>
-<script src="header.js"></script>
+<script src="login.js"></script>
 </body>
 </html>
